# nil

./: .gitignore  LICENSE  README.md  nil.cabal
examples/: avl.0.nil  avl.1.nil  avl.2.nil  benchmark.nil  cut.0.nil  cut.1.nil  cut.2.nil  cut.3.nil  error.grammar.0.nil  error.grammar.1.nil  error.grammar.2.nil  error.grammar.3.nil  error.type_inference.0.nil  error.type_inference.1.nil  error.type_inference.2.nil  error.type_inference.3.nil  getter.0.nil  getter.1.nil  list.0.nil  maybe.0.nil  maybe.0.shortQ.nil  neg.0.nil  peano.add.0.nil  peano.add.1.nil  peano.add.1.shortQ.nil  qsort.nil  readme.example.0.nil  readme.example.1.nil  records.0.nil  records.1.nil  records.2.nil  records.3.nil  records.4.nil  tests.comments.0.nil  tests.easter_egg.nil  tests.whitespace.0.nil
src/: InterpreterCheckDefined.hs  InterpreterCheckTypes.hs  InterpreterGetters.hs  InterpreterKlausel.hs  InterpreterNil.hs  InterpreterSLD.hs  InterpreterSugar.hs  InterpreterTypedefinition.hs  Main.hs  Parse.hs  PrettyShow.hs  Types.hs  Unify.hs
