name:                nil
version:             1.2.0
synopsis:            Naturwissenschaftlicher Idealistischer Logikprozessor 
description:         logic programming language with strict typing
homepage:            https://github.com/grfrederic/nil
license:             BSD3
license-file:        LICENSE
author:              Frederic Grabowski
maintainer:          grabowski.frederic@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

executable nil
  main-is:             Main.hs
  ghc-options:         -Wall
  other-modules:       Types,
                       Parse,
                       Unify,
                       PrettyShow,
                       InterpreterTypedefinition,
                       InterpreterGetters,
                       InterpreterSugar,
                       InterpreterCheckTypes,
                       InterpreterCheckDefined,
                       InterpreterKlausel,
                       InterpreterSLD,
                       InterpreterNil
  build-depends:       base >=4.9 && <4.10,
                       transformers,
                       megaparsec,
                       containers,
                       mtl,
                       text
  hs-source-dirs:      src
  default-language:    Haskell2010

